# sh-to-telegram

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  logger.rs  main.rs  sh-to-telegram-template.toml  telegram.rs
src/lib/: app_init.rs  cli.rs  config.rs  logger.rs  mod.rs  telegram.rs
tests/: test_config_ingestion.rs
tests/config/: sh-to-telegram.toml
utils/local_dev/runConfigurations/: Run.run.xml
