[package]
name = "sh-to-telegram"
version = "0.1.0"
edition = "2021"
authors = ["Robert Li"]
description = "A CLI bridge to Telegram"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
frankenstein = "0.19"
chrono = "0.4"
dirs = "4.0.0"
toml = "0.5.9"
serde = "1.0.138"