[package]
name = "sh-to-telegram"
version = "0.3.0"
edition = "2021"
authors = ["Robert Li"]
description = "A CLI bridge to Telegram to send almost pre-canned messages."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
frankenstein = "0.22.0"
chrono = "0.4"
dirs = "4.0.0"
toml = "0.5.9"
serde = "1.0.138"
